# adapters/api/json/collection/presenter.go
@@ -19,6 +19,8 @@ func (p Presenter) SuccessFindCollection(r clc.Collection) {
 	response := models.Collection{
 		Name:        r.Name,
 		Description: r.Description,
+		Group:       r.Group,
+		Profile:     r.Profile,
 	}
 
 	json.WriteJSON(p.Writer, 200, response)
